Polishing.
Consistent offending method name format.

Use String.format(…) instead of formatted(…).

Original pull request: #4547
See #4546